# spot-on-track-scraper

./: .gitignore  .pyrightconfig.json.swp  Afterglow - Spot On Track.html  README.md  apple_api.json  main.py  main_scraper.py  pyproject.toml  pyrightconfig.json
tests/: pyproject.toml
