[tool.poetry]
name = "spot-on-track-scraper"
version = "0.1.0"
description = ""
authors = ["regutierrez <11924623+regutierrez@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
